feat(cli): add manage command
